traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:20: error: not found: value cpt
    ecritMessage(cpt)
                 ^TraversalByColumn:21: error: not found: value cpt
    cpt = cpt + 1
    ^